maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: not found: value x
  for (i <- 0 to x-1) {
                 ^JediEscaper:8: error: not found: value y
    for (j <- 0 to y-1) {
                   ^JediEscaper:19: error: not found: value x
        if (getIndication(x,y)!=9999) {
                          ^JediEscaper:19: error: not found: value y
        if (getIndication(x,y)!=9999) {
                            ^JediEscaper:20: error: not found: value x
          if (!aMurNord(x,y) && (getIndication(x-1,y)==9999)) {
                        ^JediEscaper:20: error: not found: value y
          if (!aMurNord(x,y) && (getIndication(x-1,y)==9999)) {
                          ^JediEscaper:20: error: not found: value x
          if (!aMurNord(x,y) && (getIndication(x-1,y)==9999)) {
                                               ^JediEscaper:20: error: not found: value y
          if (!aMurNord(x,y) && (getIndication(x-1,y)==9999)) {
                                                   ^JediEscaper:21: error: not found: value x
            setIndication(x-1,y,c)}
                          ^JediEscaper:21: error: not found: value y
            setIndication(x-1,y,c)}
                              ^JediEscaper:22: error: not found: value x
          else if (!aMurOuest(x,y) && (getIndication(x,y-1)==9999)) {
                              ^JediEscaper:22: error: not found: value y
          else if (!aMurOuest(x,y) && (getIndication(x,y-1)==9999)) {
                                ^JediEscaper:22: error: not found: value x
          else if (!aMurOuest(x,y) && (getIndication(x,y-1)==9999)) {
                                                     ^JediEscaper:22: error: not found: value y
          else if (!aMurOuest(x,y) && (getIndication(x,y-1)==9999)) {
                                                       ^JediEscaper:23: error: not found: value x
            setIndication(x,y-1,c)}
                          ^JediEscaper:23: error: not found: value y
            setIndication(x,y-1,c)}
                            ^JediEscaper:24: error: not found: value y
          else if ((y+1<ym) && !aMurNord(x,y+1) && (getIndication(x,y+1)==9999)) {
                    ^JediEscaper:24: error: not found: value x
          else if ((y+1<ym) && !aMurNord(x,y+1) && (getIndication(x,y+1)==9999)) {
                                         ^JediEscaper:24: error: not found: value y
          else if ((y+1<ym) && !aMurNord(x,y+1) && (getIndication(x,y+1)==9999)) {
                                           ^JediEscaper:24: error: not found: value x
          else if ((y+1<ym) && !aMurNord(x,y+1) && (getIndication(x,y+1)==9999)) {
                                                                  ^JediEscaper:24: error: not found: value y
          else if ((y+1<ym) && !aMurNord(x,y+1) && (getIndication(x,y+1)==9999)) {
                                                                    ^JediEscaper:25: error: not found: value x
            setIndication(x,y+1,c)}
                          ^JediEscaper:25: error: not found: value y
            setIndication(x,y+1,c)}
                            ^JediEscaper:26: error: not found: value x
          else if ((x+1<xm) && !aMurOuest(x+1,y) && (getIndication(x+1,y)==9999)) {
                    ^JediEscaper:26: error: not found: value x
          else if ((x+1<xm) && !aMurOuest(x+1,y) && (getIndication(x+1,y)==9999)) {
                                          ^JediEscaper:26: error: not found: value y
          else if ((x+1<xm) && !aMurOuest(x+1,y) && (getIndication(x+1,y)==9999)) {
                                              ^JediEscaper:26: error: not found: value x
          else if ((x+1<xm) && !aMurOuest(x+1,y) && (getIndication(x+1,y)==9999)) {
                                                                   ^JediEscaper:26: error: not found: value y
          else if ((x+1<xm) && !aMurOuest(x+1,y) && (getIndication(x+1,y)==9999)) {
                                                                       ^JediEscaper:27: error: not found: value x
            setIndication(x+1,y,c)}
                          ^JediEscaper:27: error: not found: value y
            setIndication(x+1,y,c)}
                              ^