maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var xb = 0
  var yb = 0
  var xm = getMondeLargeur()
  var ym = getMondeHauteur()
  for (i <- 0 to x-1) {
    for (j <- 0 to y-1) {
      if (aBiscuit(i,j)) {
        xb = i
        yb = j
      }
    }
  }
  setIndication(xb,yb,0)
  for (c <- 1 to xb*yb) {
    for (i <- 0 to xb-1) {
      for (j <- 0 to yb-1) {
        if (getIndication(x,y)!=9999) {
          if (!aMurNord(x,y) && (getIndication(x-1,y)==9999)) {
            setIndication(x-1,y,c)}
          else if (!aMurOuest(x,y) && (getIndication(x,y-1)==9999)) {
            setIndication(x,y-1,c)}
          else if ((y+1<ym) && !aMurNord(x,y+1) && (getIndication(x,y+1)==9999)) {
            setIndication(x,y+1,c)}
          else if ((x+1<xm) && !aMurOuest(x+1,y) && (getIndication(x+1,y)==9999)) {
            setIndication(x+1,y,c)}
        }
      }
    }
  }
}

